<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr1.lab1ui.MainActivity"
    android:orientation="vertical"
    android:layout_weight="1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameReq"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:nextFocusDown="@+id/lastName"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:nextFocusDown="@+id/phoneNumber"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneNumberReq"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:nextFocusDown="@+id/email"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailReq"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/address"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gender"
                    />
                <RadioGroup
                    android:id="@+id/genderGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/genderMale"
                    >
                    <RadioButton
                        android:id="@+id/genderMale"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/male"
                        android:layout_weight="1"
                        />
                    <RadioButton
                        android:id="@+id/genderFemale"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/female"
                        android:layout_weight="1"
                        />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/hobby"
                    />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/hobbiesSpinner"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:maxLines="1"
                    android:inputType="textPostalAddress"
                    android:nextFocusDown="@+id/autoCountry"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <AutoCompleteTextView
                    android:id="@+id/autoCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/countryNameReq"
                    android:maxLines="1"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/birthDate"
                />
            <Button
                android:id="@+id/dateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAlignment="center"
                android:onClick="showDatePickerDialog"
                android:backgroundTint="?android:colorBackground"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:paddingLeft="30dp"
                android:paddingTop="13dp"

                >
                <CheckBox
                    android:id="@+id/isFavorite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:text="@string/favorite"
                    style="?android:attr/starStyle"
                    android:textSize="16dp"
                    />
            </LinearLayout>

        </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:maxLines="10"
            android:scrollbars="vertical"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12dp"
            android:textColor="@color/colorWhite"
            android:text="@string/showButton"
            android:backgroundTint="#4CAF50"
            android:onClick="showData"/>
    </LinearLayout>

</LinearLayout>
